--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
-    "npm": "^10.2.4"
+    "npm": "^10.2.4",
+    "uuid": "^9.0.1"
   }
 }
