--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "node-cron": "^3.0.3",
     "nodemon": "^3.0.2",
     "npm": "^10.2.4",
+    "path": "^0.12.7",
+    "sharp": "^0.33.1",
     "uuid": "^9.0.1"
   }
 }
