--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "http": "^0.0.1-security",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
@@ -27,6 +28,7 @@
     "npm": "^10.2.4",
     "path": "^0.12.7",
     "sharp": "^0.33.1",
+    "socket.io": "^4.7.4",
     "uuid": "^9.0.1"
   }
 }
